RESOLVED FIXED104161
Empty parse cache when receiving a low memory warning
https://bugs.webkit.org/show_bug.cgi?id=104161
Summary Empty parse cache when receiving a low memory warning
Oliver Hunt
Reported 2012-12-05 13:22:55 PST
Empty parse cache when receiving a low memory warning
Attachments
Patch (4.98 KB, patch)
2012-12-05 13:25 PST, Oliver Hunt
no flags
Patch (5.77 KB, patch)
2012-12-05 15:29 PST, Oliver Hunt
fpizlo: review+
Oliver Hunt
Comment 1 2012-12-05 13:25:36 PST
Build Bot
Comment 2 2012-12-05 14:37:48 PST
Oliver Hunt
Comment 3 2012-12-05 15:29:10 PST
Filip Pizlo
Comment 4 2012-12-05 15:38:04 PST
Comment on attachment 177844 [details] Patch R=me. When does this get invoked?
Oliver Hunt
Comment 5 2012-12-05 15:43:55 PST
Geoffrey Garen
Comment 6 2012-12-05 16:46:18 PST
Comment on attachment 177844 [details] Patch You should add a call to didAbandonObjectGraph(). How about inside discardAllCode()?
Geoffrey Garen
Comment 7 2012-12-05 23:07:56 PST
It looks like this patch only covers WebCore, and not other embedders of JavaScriptCore. I think we need a handler inside JavaScriptCore or WTF.
Note You need to log in before you can comment on or make changes to this bug.